--- a/style.css
+++ b/style.css
@@ -15,13 +15,18 @@
 .wrapper {
 	max-width: 952px;
 	display: flex;
-	align-items: center;
 	margin: auto;
+	flex-direction: column;
+}
+
+header .wrapper {
+	flex-direction: row;
+	align-items: center;
 }
 
 header {
 	height: 127px;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	font-size: 13px;
@@ -204,12 +209,7 @@ a {
 }
 
 #forwho {
-	margin: 69px 0 128px 0;
-}
-
-.forwho__vertical {
-	display: flex;
-	flex-direction: column;
+	margin: 69px 0 64px 0;
 }
 
 .forwho__head {
@@ -225,6 +225,15 @@ a {
 	padding: 13.5px 24px;
 	border-radius: 6px;
 	font-size: 13px;
+	border: 1px solid transparent;
+	transition: 0.2s;
+}
+
+.forwho__head a:hover,
+.forwho__head a:active {
+	background-color: transparent;
+	color: #be252a;
+	border: 1px solid #be252a;
 }
 
 .forwho__head h2 {
@@ -257,7 +266,7 @@ a {
 	grid-area: four;
 }
 
-.grid__el {
+.fw_grid__el {
 	padding: 32px 32px 49px 32px;
 	border: 1px solid #39693926;
 	border-radius: 12px;
@@ -267,7 +276,7 @@ a {
 	gap: 12px;
 }
 
-.grid__el img {
+.fw_grid__el img {
 	width: 41px;
 	height: 41px;
 	background-color: #f4f4f4;
@@ -278,12 +287,12 @@ a {
 	padding: 9px;
 }
 
-.grid__el h3 {
+.fw_grid__el h3 {
 	font-family: "Century Gothic";
 	font-size: 24px;
 }
 
-.grid__el p {
+.fw_grid__el p {
 	color: #2e2e2e99;
 	font-size: 14px;
 }
@@ -291,4 +300,124 @@ a {
 .grid__two,
 .grid__three {
 	padding-right: calc(98px + 32px);
+}
+
+#howItWorks {
+	margin: 64px 0 60px 0;
+}
+
+#howItWorks h2 {
+	font-family: "Century Gothic";
+	font-size: 54px;
+}
+
+.howItWorks__grid {
+	display: grid;
+	grid-template-columns: repeat(7, 1fr);
+	grid-template-rows: repeat(7, 1fr);
+	gap: 40px;
+	height: 468px;
+	margin: 44px 0 0 0;
+}
+
+.hiw_grid__el {
+	padding: 32px;
+	border-radius: 12px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
+
+.hiw_grid__el h3 {
+	font-family: "Century Gothic";
+	font-size: 28px;
+	letter-spacing: -0.5px;
+}
+
+.hiw_grid__el p {
+	font-size: 14px;
+	line-height: 20px;
+	z-index: 2;
+}
+
+.hiw_grid__el img {
+	position: absolute;
+}
+
+.hiw_grid__el a {
+	margin: 12px 0 0 0;
+	align-self: flex-start;
+	z-index: 2;
+	font-size: 13px;
+	transition: 0.2s;
+	padding: 10.5px 23px;
+	color: white;
+	border-radius: 6px;
+	border: 1px solid transparent;
+}
+
+.grid__banking {
+	background-color: #e9e6e8;
+	grid-area: 1/1/8/4;
+}
+
+.banking__img {
+	bottom: 0;
+	right: 0;
+}
+
+.grid__banking a {
+	background-color: #be252a;
+}
+
+.grid__banking a:hover,
+.grid__banking a:active {
+	background-color: transparent;
+	border: 1px solid #be252a;
+	color: black;
+}
+
+.grid__mission {
+	background: radial-gradient(circle 150px at 75% 70%, #2fb14c80, #396939);
+	grid-area: 4/4/8/8;
+	color: white;
+}
+
+.grid__mission p {
+	width: 60%;
+}
+
+.mission__img {
+	bottom: 0;
+	height: 230px;
+	right: 10px;
+}
+
+.grid__mission a {
+	background-color: #5d925d;
+}
+
+.grid__mission a:hover,
+.grid__mission a:active {
+	background-color: transparent;
+	border: 1px solid #5d925d;
+}
+
+.grid__fund {
+	grid-area: 1/4/4/8;
+	border: 1px solid #39693926;
+}
+
+.grid__fund h3 {
+	width: 60%;
+}
+
+.fund__img {
+	top: 20px;
+	right: 20px;
+	width: 87px;
+	padding: 12px;
+	border-radius: 8px;
+	box-shadow: 0px 0px 20px 0px #0000001a;
 }
