--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ a {
 	color: #ffffff;
 }
 
+h2 {
+	font-size: 54px;
+	font-family: "Century Gothic";
+	font-weight: 700;
+}
+
 .nav_list a {
 	padding: 10px;
 	transition: 0.2s;
@@ -236,12 +242,6 @@ a {
 	border: 1px solid #be252a;
 }
 
-.forwho__head h2 {
-	font-size: 54px;
-	font-weight: 700;
-	font-family: "Century Gothic";
-}
-
 .forwho__grid {
 	margin: 44px 0 0 0;
 	display: grid;
@@ -304,11 +304,6 @@ a {
 
 #howItWorks {
 	margin: 64px 0 60px 0;
-}
-
-#howItWorks h2 {
-	font-family: "Century Gothic";
-	font-size: 54px;
 }
 
 .howItWorks__grid {
@@ -421,3 +416,75 @@ a {
 	border-radius: 8px;
 	box-shadow: 0px 0px 20px 0px #0000001a;
 }
+
+#selection {
+	margin: 60px 0 54px 0;
+}
+
+.selection__grid {
+	margin: 44px 0 0 0;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	gap: 40px;
+}
+
+.sel_grid__el {
+	position: relative;
+	padding: 32px;
+	border: 1px solid #39693926;
+	border-radius: 12px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-between;
+	height: 271px;
+}
+
+.sel_grid__el h3 {
+	font-size: 24px;
+}
+
+.sel_grid__el img {
+	width: 41px;
+	height: 41px;
+	background-color: #f4f4f4;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 8px;
+	padding: 10px;
+}
+
+.sel_grid__el span {
+	transition: 0.5s;
+	position: absolute;
+	right: 32px;
+	top: 32px;
+	width: 28px;
+	height: 28px;
+	border-radius: 50%;
+	color: white;
+	font-size: 13px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #be252a;
+}
+
+.sel_grid__el a {
+	background-color: #f8e9ea;
+	color: #be252a;
+	border-radius: 6px;
+	font-size: 13px;
+	padding: 10.5px 15px;
+	border: 1px solid transparent;
+	transition: 0.2s;
+	z-index: 2;
+}
+
+.sel_grid__el a:hover,
+.sel_grid__el a:active {
+	border-color: #be252a;
+	background-color: transparent;
+}
+
