--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ h2 {
 	position: relative;
 	height: 846px;
 	overflow: hidden;
-	background: radial-gradient(circle 420px at 63% 60%, #2fb14c80, #396939);
+	background: radial-gradient(circle 420px at 63% 60%, #2fb14b, #396939);
 }
 
 .rounder {
@@ -374,7 +374,7 @@ h2 {
 }
 
 .grid__mission {
-	background: radial-gradient(circle 150px at 75% 70%, #2fb14c80, #396939);
+	background: radial-gradient(circle 150px at 75% 70%, #2fb14b, #396939);
 	grid-area: 4/4/8/8;
 	color: white;
 }
@@ -438,6 +438,7 @@ h2 {
 	align-items: flex-start;
 	justify-content: space-between;
 	height: 271px;
+	overflow: hidden;
 }
 
 .sel_grid__el h3 {
@@ -469,6 +470,7 @@ h2 {
 	justify-content: center;
 	align-items: center;
 	background-color: #be252a;
+	z-index: 2;
 }
 
 .sel_grid__el a {
@@ -480,11 +482,100 @@ h2 {
 	border: 1px solid transparent;
 	transition: 0.2s;
 	z-index: 2;
+	position: relative;
+}
+
+@keyframes sel_a_totop {
+	0% {
+		top: 0px;
+	}
+	100% {
+		top: calc(0px - 271px + 64px + 38px);
+	}
+}
+
+.sel_grid__el:hover a,
+.sel_grid__el:active a {
+	animation: sel_a_totop 0s linear forwards;
 }
 
 .sel_grid__el a:hover,
 .sel_grid__el a:active {
-	border-color: #be252a;
+	border-color: #f8e9ea;
 	background-color: transparent;
+	color: #f8e9ea;
 }
 
+.sel__popup {
+	width: inherit;
+	background: radial-gradient(circle 350px at 50% 0%, #2fb14b, #396939);
+	color: white;
+	font-size: 12px;
+	line-height: 16px;
+	position: absolute;
+	bottom: -102%;
+	left: 0;
+	height: 271px;
+	padding: 85px 32px 5px 32px;
+	display: flex;
+	gap: 12px;
+	flex-direction: column;
+	transition: 0.3s;
+	overflow: auto;
+}
+
+.sel_grid__el:hover .sel__popup,
+.sel_grid__el:active .sel__popup {
+	bottom: 0%;
+}
+
+.sel_bottom {
+	position: relative;
+	overflow: hidden;
+	border-radius: 12px;
+	padding: 32px 44px;
+	background: linear-gradient(265.87deg, #f7f6f6 48.83%, #e9e6e8 102.38%);
+	margin: 60px 0 0 0;
+}
+
+.bottom_text {
+	width: 60%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 12px;
+}
+
+.bottom_text h3 {
+	font-family: "Century Gothic";
+	font-size: 32px;
+	line-height: 36px;
+}
+
+.bottom_text p {
+	font-size: 14px;
+}
+
+.bottom_text a {
+	margin: 12px 0 0 0;
+	background-color: #be252a;
+	color: white;
+	padding: 13.5px 24px;
+	border-radius: 6px;
+	font-size: 13px;
+	border: 1px solid transparent;
+	transition: 0.2s;
+}
+
+.bottom_text a:hover,
+.bottom_text a:active {
+	background-color: transparent;
+	color: #be252a;
+	border: 1px solid #be252a;
+}
+
+.sel_bottom img {
+	position: absolute;
+	right: 0;
+	top: 0;
+}
