--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ header .wrapper {
 	align-items: center;
 }
 
+#present .wrapper {
+	position: relative;
+}
+
 header {
 	height: 127px;
 	width: 100%;
@@ -179,7 +183,7 @@ h2 {
 .present__info {
 	z-index: 2;
 	position: absolute;
-	bottom: 50px;
+	bottom: calc(509px - 677px - 120px);
 	left: 50%;
 	transform: translateX(-50%);
 	display: flex;
@@ -776,7 +780,7 @@ footer {
 }
 
 .level1__flex p {
-	color: #2E2E2E99;
+	color: #2e2e2e99;
 }
 
 .level1__flex address {
@@ -788,7 +792,237 @@ footer {
 
 .level2,
 .level4 {
-	border-top: 1px solid #3C6A3A26;
-	border-bottom: 1px solid #3C6A3A26;
+	border-top: 1px solid #3c6a3a26;
+	border-bottom: 1px solid #3c6a3a26;
 	margin: 32px 0;
+}
+
+.level2 {
+	display: flex;
+	justify-content: space-between;
+	padding: 32px 0;
+	flex-wrap: wrap;
+}
+
+.lvl2__item {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.lvl2__item h3 {
+	margin: 0 0 4px 0;
+	font-size: 24px;
+	font-family: "Century Gothic";
+}
+
+.lvl2__item a {
+	color: #2e2e2ecc;
+	font-weight: 600;
+	font-size: 14px;
+	transition: 0.2s;
+	line-height: 14px;
+}
+
+.lvl2__item a:hover,
+.lvl2__item a:active {
+	color: #2fb14b;
+}
+
+.lvl2_item4__el {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
+
+.lvl2_item4__el p {
+	font-weight: 500;
+	font-size: 14px;
+}
+
+.lvl2_item4__el span {
+	font-size: 14px;
+	color: #2e2e2e99;
+	line-height: 18px;
+}
+
+.level3 {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 5%;
+}
+
+.level3 h2 {
+	font-size: 30px;
+	letter-spacing: -0.5px;
+	line-height: 40px;
+	width: 70%;
+}
+
+.lvl3__text {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.lvl3__text p {
+	font-size: 14px;
+	line-height: 22px;
+}
+
+.lvl3__links {
+	display: flex;
+	gap: 12px;
+}
+
+.lvl3_link_item {
+	border-radius: 4px;
+	padding: 10px 20px;
+	border: 1px solid transparent;
+	display: flex;
+	gap: 8px;
+	align-items: center;
+	background-color: #396939;
+	transition: 0.2s;
+}
+
+.lvl3_link_item svg {
+	fill: white;
+}
+.lvl3_link_item:hover,
+.lvl3_link_item:active {
+	background-color: transparent;
+	border: 1px solid #2fb14b;
+	box-shadow: 0px 0px 5px 0px #2fb14b;
+}
+
+.lvl3_link_item:hover svg,
+.lvl3_link_item:active svg,
+.lvl3_link_item:hover a,
+.lvl3_link_item:active a {
+	fill: #396939;
+	color: #396939;
+}
+
+.lvl3_link_item a {
+	font-size: 13px;
+	font-weight: 500;
+}
+
+.level4 {
+	display: grid;
+	grid-template-columns: 5fr 7fr;
+	padding: 32px 0;
+}
+
+.lvl4__text {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.lvl4__text h3 {
+	font-family: "Century Gothic";
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 24px;
+	letter-spacing: -0.5px;
+}
+
+.lvl4__text p {
+	font-size: 14px;
+	color: #2e2e2ecc;
+	line-height: 22px;
+}
+.lvl4__text a {
+	color: #2e2e2ecc;
+	text-decoration: underline;
+	font-weight: 500;
+	transition: 0.2s;
+}
+
+.lvl4__text a:hover,
+.lvl4__text a:active {
+	color: #2fb14b;
+}
+
+.level4 form {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 12px 14px;
+	grid-template-areas: "name mes" "tel mes" "email btn";
+}
+
+form input {
+	height: 50px;
+}
+
+form input,
+form textarea {
+	padding: 0 0 0 16px;
+	border: 0;
+	border-radius: 6px;
+	outline: none;
+	transition: 0.2s;
+}
+
+form input:focus,
+form textarea:focus {
+	box-shadow: 0px 0px 5px 0px #2fb14b;
+}
+
+form textarea {
+	padding: 22px 16px;
+}
+
+form button {
+	border-radius: 6px;
+	background-color: #be252a;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	border: 1px solid transparent;
+	transition: 0.2s;
+}
+
+form button svg {
+	fill: white;
+	transition: 0.2s;
+}
+
+form button:hover,
+form button:active {
+	border: 1px solid #be252a;
+	background-color: transparent;
+	color: #be252a;
+}
+
+form button:hover svg,
+form button:active svg {
+	fill: #be252a;
+}
+
+#name {
+	grid-area: name;
+}
+#phone {
+	grid-area: tel;
+}
+#email {
+	grid-area: email;
+}
+#message {
+	grid-area: mes;
+}
+#btn {
+	grid-area: btn;
+}
+
+.level5 {
+	font-size: 14px;
+	line-height: 22px;
+	color: #2e2e2ecc;
 }
