--- a/style.css
+++ b/style.css
@@ -145,14 +145,14 @@ h2 {
 	padding: 11.5px 20px;
 	color: white;
 	border-radius: 6px;
-	background-color: #396939;
+	background-color: #5D925D;
 	border: 1px solid transparent;
 }
 
 .head_requisition:hover,
 .head_requisition:active {
 	background-color: transparent;
-	border: 1px solid #396939;
+	border: 1px solid #5D925D;
 	color: #2e2e2e;
 }
 
@@ -1517,4 +1517,345 @@ aside {
 
 .fund__main {
 	margin: 171px 0 0 0;
+}
+
+.ft_grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 40px;
+	margin: 40px 0 0 0;
+}
+
+.ft_grid_el {
+	border: 1px solid #39693926;
+	border-radius: 12px;
+	padding: 32px;
+	position: relative;
+	transition: 0.2s;
+}
+
+.ft_grid_el:hover,
+.ft_grid_el:active {
+	transform: scale(1.05, 1.05);
+}
+
+.ft_grid_el h3 {
+	font-size: 24px;
+	line-height: 28px;
+	letter-spacing: -0.5px;
+	font-family: "Century Gothic";
+}
+
+.ft_grid_img {
+	width: 48px;
+	height: 48px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	border: 1px solid #39693926;
+	border-radius: 12px;
+	top: 32px;
+	right: 32px;
+}
+
+.ft_grid_el a {
+	background-color: #be252a;
+	color: white;
+	font-size: 13px;
+	font-weight: 500;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 6px;
+	padding: 10.5px 0;
+	border: 1px solid transparent;
+	transition: 0.2s;
+}
+
+.ft_grid_el a:active,
+.ft_grid_el a:hover {
+	color: #be252a;
+	background-color: transparent;
+	border: 1px solid #be252a;
+}
+
+.ft_text_cont {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	margin: 40px 0;
+}
+
+.ft_text_el {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.ft_text_el h5 {
+	font-size: 20px;
+	line-height: 24px;
+}
+
+.ft_text_el h6 {
+	font-size: 14px;
+	line-height: 20px;
+}
+
+.ft_text_el p {
+	font-size: 12px;
+	line-height: 18px;
+	color: #2e2e2ecc;
+}
+
+.ft_text_p {
+	min-height: 54px;
+}
+
+.ft_islam_el {
+	background-color: #f5f8f5;
+}
+
+.ft_islam_img {
+	background-color: white;
+	border: none;
+}
+
+.ft_islam_rek {
+	position: absolute;
+	top: -9px;
+	right: 0;
+	color: white;
+	padding: 8px 12px;
+	border-radius: 100px 100px 0px 100px;
+	background-color: #007fff;
+	font-size: 10px;
+	font-weight: 700;
+	line-height: 10px;
+}
+
+.ft_bottom {
+	background: radial-gradient(circle 450px at 80% 50%, #2fb14b, #396939);
+	color: white;
+}
+
+.ft_bottom a {
+	background-color: #6c916c;
+}
+.ft_bottom a:hover,
+.ft_bottom a:active {
+	color: white;
+	border: 1px solid #6c916c;
+}
+
+#fundconditions {
+	margin: 60px 0;
+}
+
+.fc_flex {
+	display: flex;
+	gap: 40px;
+	margin: 44px 0 0 0;
+}
+
+.fc_flex_el {
+	border: 1px solid #39693926;
+	padding: 32px;
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+
+.fc_img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 32px;
+	height: 32px;
+	border-radius: 8px;
+	background-color: #f7f7f7;
+}
+
+.fc_text_cont {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.fc_text_cont h5 {
+	font-family: "Century Gothic";
+	font-size: 16px;
+	line-height: 24px;
+	letter-spacing: -0.5px;
+}
+
+.fc_text_cont p {
+	font-size: 14px;
+	line-height: 20px;
+	color: #2e2e2ecc;
+}
+
+#industries {
+	margin: 60px 0 80px 0;
+}
+
+
+.ind_grid {
+	display: grid;
+	grid-template-columns: repeat(9, 1fr);
+	gap: 40px;
+	margin: 44px 0 0 0;
+}
+
+.ind_grid_el {
+	border-radius: 12px;
+	padding: 32px;
+	position: relative;
+}
+
+.ind_grid_img {
+	position: absolute;
+	top: 32px;
+	right: 32px;
+	width: 48px;
+	height: 48px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 12px;
+}
+
+.prior_img {
+	background-color: #419441;
+}
+
+.part_img {
+	background-color: #eaf6ea;
+}
+
+.ind_grid_el h4 {
+	font-size: 20px;
+	line-height: 28px;
+	letter-spacing: -0.5px;
+	font-family: "Century Gothic";
+	margin: 0 0 40px 0;
+}
+
+.ind_grid_el h3 {
+	font-family: "Century Gothic";
+	font-size: 32px;
+	font-weight: 700;
+	line-height: 36px;
+	letter-spacing: -0.5px;
+}
+
+.ind__prior {
+	grid-area: 1/1/2/7;
+	background-color: #3969390d;
+}
+
+.ind__part {
+	grid-area: 1/7/2/10;
+	background-color: #f7f7f7;
+}
+
+.ind__unsup {
+	grid-area: 2/1/3/5;
+	background-color: #be252a08;
+}
+
+.ind__consult {
+	grid-area: 2/5/3/10;
+	background: linear-gradient(305.46deg, #edecec 1.78%, #e9e6e8 99.35%);
+}
+
+.ind_prior_grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	gap: 32px 0;
+}
+
+.prior_el {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	align-items: center;
+}
+
+.prior_el span {
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	text-align: center;
+}
+
+.prior_el_img {
+	width: 32px;
+	height: 32px;
+	background-color: white;
+	border-radius: 8px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.ind_part_cont,
+.ind_unsup_cont {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 32px;
+}
+
+.unsup_img {
+	background-color: #e1292f;
+}
+
+.ind__consult {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
+
+.ind__consult img {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+
+.ind__consult p {
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	color: #2E2E2ECC;
+}
+
+.ind__consult form {
+	margin: 12px 0 0 0;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 12px;
+}
+
+#csltname {
+	grid-area: 1/1/2/2;
+}
+
+#csltphone {
+	grid-area: 1/2/2/3;
+}
+
+#csltmessage {
+	grid-area: 2/1/3/3;
+}
+
+#csltbtn {
+	grid-area: 3/1/4/2;
+	height: 50px;
+	margin: 12px 0 0 0;
 }
