--- a/style.css
+++ b/style.css
@@ -145,14 +145,14 @@ h2 {
 	padding: 11.5px 20px;
 	color: white;
 	border-radius: 6px;
-	background-color: #5D925D;
+	background-color: #5d925d;
 	border: 1px solid transparent;
 }
 
 .head_requisition:hover,
 .head_requisition:active {
 	background-color: transparent;
-	border: 1px solid #5D925D;
+	border: 1px solid #5d925d;
 	color: #2e2e2e;
 }
 
@@ -1702,7 +1702,6 @@ aside {
 	margin: 60px 0 80px 0;
 }
 
-
 .ind_grid {
 	display: grid;
 	grid-template-columns: repeat(9, 1fr);
@@ -1832,7 +1831,7 @@ aside {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 20px;
-	color: #2E2E2ECC;
+	color: #2e2e2ecc;
 }
 
 .ind__consult form {
@@ -1858,4 +1857,123 @@ aside {
 	grid-area: 3/1/4/2;
 	height: 50px;
 	margin: 12px 0 0 0;
+}
+
+/* end funding */
+/* start contacts styles */
+
+#contact {
+	padding: 127px 0 0 0;
+}
+
+.contact_grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
+
+.contact_grid_form {
+	border-radius: 20px;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	background-color: #3969390d;
+}
+
+#contact h2 {
+	margin: 50px 0;
+}
+
+#contact h3 {
+	font-size: 24px;
+	font-family: "Century Gothic";
+}
+
+#contact form {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
+
+#CPname {
+	grid-area: 1/1/2/3;
+}
+
+#CPphone {
+	grid-area: 2/1/3/2;
+}
+
+#CPemail {
+	grid-area: 2/2/3/3;
+}
+
+#CPmessage {
+	grid-area: 3/1/4/3;
+}
+
+#CPbtn {
+	grid-area: 4/1/5/3;
+	height: 50px;
+}
+
+#contact iframe {
+	border-radius: 20px;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.contact_info {
+	grid-area: 2/1/3/3;
+	background-color: #3c6a3a26;
+	border-radius: 20px;
+	padding: 20px;
+}
+
+.contact_info_grid {
+	margin: 20px 0;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
+
+.contact_info_grid address {
+	grid-area: 1/1/2/3;
+}
+
+.contact_info_grid span {
+	font-weight: 700;
+}
+
+.c_info_el {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+}
+
+.c_info_el a {
+	transition: 0.2s;
+}
+
+.c_info_el a:hover,
+.c_info_el a:active {
+	color: #2fb14b;
+}
+
+.info_el_img {
+	width: 32px;
+	height: 32px;
+	background-color: white;
+	padding: 6px;
+	border-radius: 8px;
+}
+
+.info_el_img img {
+	width: 100%;
+	height: 100%;
+}
+
+.info_worktime_text {
+	line-height: 24px;
 }
